# Algoritm

./: .gitignore  1.py  DOCKER.md  Makefile  README.md  activeContext.md  admin-roadmap-implementation-plan.md  admin-roadmap-implementation-results-mindmap.html  admin-roadmap-plan-mindmap.html  docker-compose.dev.yml  docker-compose.yml  fix-infinite-requests-mindmap.html  health-endpoint-results-mindmap.html  implement-frontend-integration-mindmap.html  lesson 6.py  lesson 8.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson7.py  login-form-fix-plan-mindmap.html  login-form-fix-results-mindmap.html  navigation-fix-plan-mindmap.html  node-filtering-improvement-plan-mindmap.html  node-filtering-improvement-results-mindmap.html  node-relations-ux-improvement-mindmap.html  node-sync-fix-plan-mindmap.html  node-sync-fix-results-mindmap.html  package-lock.json  progress.md  projectbrief.md  react-router-integration-mindmap.html  recursion-error-fix-plan-mindmap.html  roadmap-fix-plan-mindmap.html  roadmap-fixes-mindmap.html  roadmap-improvements-plan-mindmap.html  simplemindmap-integration-mindmap.html  tasks.md
.cursor/rules/: runproject.mdc
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.optimized  Makefile  README.md  alembic.ini  dependency-analysis.md  docker-compose.yml  env.example  implement-postgresql-migration-mindmap.html  init.sql  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  auth.py  cli.py  crud.py  data_manager.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py  settings.py
backend/app/routers/: admin.py  auth.py  corporate.py  progress.py  roadmap.py  team.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 949cbd351ffe_add_professions_table.py  aa3c695d9636_add_admin_fields_and_node_blocks.py  b25c29ada68d_initial_migration.py
backend/tests/: conftest.py  test_auth.py  test_progress.py  test_recursion_fix.py  test_roadmap.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  store.ts  store.tsx  (+1 more)
(+33 files in other folders)
